--- a/public/index.html
+++ b/public/index.html
@@ -180,6 +180,6 @@ button:hover {
     </div>
 
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
