--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video Chat</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+  font-family: Arial, sans-serif;
+}
+
+#video-container {
+  display: flex;
+  flex-direction: row;
+}
+
+#local-video {
+  width: 40%;
+  height: 30vh;
+  margin: 10px;
+  border: 1px solid black;
+}
+
+#remote-video {
+  width: 40%;
+  height: 30vh;
+  margin: 10px;
+  border: 1px solid black;
+}
+  </style>
 </head>
 <body>
   <h1>Video Chat</h1>
