--- a/public/index.html
+++ b/public/index.html
@@ -318,8 +318,8 @@
                     
                     // إنشاء اتصال PeerJS
                     peer = new Peer(undefined, {
-                        host: 'localhost',
-                        port: 9000,
+                        host: 'bolt-production-6f3d.up.railway.app',
+                        port: 3000,
                         path: '/peerjs'
                     });
 
